Closed Bug 1729147 Opened 3 years ago Closed 3 years ago

Serialization of the `text-decoration` shorthand does not follow canonical order in the spec

Categories

(Core :: CSS Parsing and Computation, defect)

defect

Tracking

()

RESOLVED FIXED
94 Branch
Tracking Status
firefox94 --- fixed

People

(Reporter: jfkthame, Assigned: jfkthame)

Details

Attachments

(1 file)

We're getting some failures in css-text-decor/parsing/text-decoration-valid.html and text-decoration-computed.html because we serialize the shorthand with thickness (if present) as the last value, but the spec has it in the second position, immediately after line.

As the addition of text-decoration-thickness is fairly recent, I doubt there's a large webcompat risk to changing our current behavior here. So I think we should just fix it to match what's in the spec (and is expected by WPT tests).

Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Pushed by jkew@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3e3ac6f8f7d9
Fix the serialization order for the text-decoration shorthand to match the canonical order in the spec. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: