Bug 1729147 - Fix the serialization order for the text-decoration shorthand to match the canonical order in the spec. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D124536